[project]
name = "users"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "expects>=0.9.0",
    "fastapi[standard]>=0.115.12",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
