[project]
name = "users"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "doublex>=1.9.6.1",
    "doublex-expects>=0.7.1",
    "expects>=0.9.0",
    "fastapi[standard]>=0.115.12",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
    "ty>=0.0.1a6",
]
