[project]
name = "users"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "fastapi[standard]>=0.115.12",
    "pydantic-settings>=2.9.1",
    "sqlalchemy[postgresql]>=2.0.41"
    ]

[dependency-groups]
dev = [
    "doublex>=1.9.6.1",
    "doublex-expects>=0.7.1",
    "pytest>=8.3.5",
    "expects>=0.9.0",
    "ruff>=0.11.7",
    "ty>=0.0.1a6",
]

[tool.uv]
default-groups = ["dev"]
